# ShareUSTC

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  Cargo.toml
backend/src/: main.rs
backend/src/api/: admin.rs  auth.rs  comment.rs  favorite.rs  image_host.rs  mod.rs  notification.rs  oss.rs  resource.rs  user.rs
backend/src/config/: mod.rs
backend/src/db/: connection.rs  mod.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: comment.rs  course.rs  favorite.rs  image.rs  like.rs  mod.rs  notification.rs  resource.rs  teacher.rs  user.rs
backend/src/repositories/: mod.rs
backend/src/services/: admin_service.rs  ai_service.rs  audit_log_service.rs  auth_service.rs  comment_service.rs  course_service.rs  favorite_service.rs  file_service.rs  image_service.rs  like_service.rs  mod.rs  notification_service.rs  oss_service.rs  rating_service.rs  resource_service.rs  storage_service.rs  teacher_service.rs  user_service.rs
backend/src/utils/: hash.rs  jwt.rs  mod.rs  response.rs
docs/: deploy_guide.md  oss_setup.md
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: admin.ts  auth.ts  client.ts  favorite.ts  hello.ts  imageHost.ts  oss.ts  request.ts  resource.ts  user.ts
frontend/src/components/: Navbar.vue
frontend/src/composables/: useDefaultFavorite.ts
frontend/src/layouts/: AdminLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  counter.ts  favorite.ts
scripts/database/: README.md  db_create_system.sh  db_create_system_win.ps1  db_init_tables.sh  db_init_tables_win.ps1  init.py  init.sql
(+37 files in other folders)
