[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["cookies"] }
actix-cors = "0.6"
actix-multipart = "0.6"
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
argon2 = "0.5"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
futures-util = "0.3"
sha2 = "0.10"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
zip = "0.6"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "macros",
    "json"
]
